--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
+    "tailwindcss": "3.4.3",
+    "postcss": "8.4.38",
     "typescript": "5.1.3"
   }
 }
